; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/ufs/extr_ufs-qcom.c_ufs_qcom_exit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/ufs/extr_ufs-qcom.c_ufs_qcom_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ufs_hba = type { i32 }
%struct.ufs_qcom_host = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ufs_hba*)* @ufs_qcom_exit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ufs_qcom_exit(%struct.ufs_hba* %0) #0 {
  %2 = alloca %struct.ufs_hba*, align 8
  %3 = alloca %struct.ufs_qcom_host*, align 8
  store %struct.ufs_hba* %0, %struct.ufs_hba** %2, align 8
  %4 = load %struct.ufs_hba*, %struct.ufs_hba** %2, align 8
  %5 = call %struct.ufs_qcom_host* @ufshcd_get_variant(%struct.ufs_hba* %4)
  store %struct.ufs_qcom_host* %5, %struct.ufs_qcom_host** %3, align 8
  %6 = load %struct.ufs_qcom_host*, %struct.ufs_qcom_host** %3, align 8
  %7 = call i32 @ufs_qcom_disable_lane_clks(%struct.ufs_qcom_host* %6)
  %8 = load %struct.ufs_qcom_host*, %struct.ufs_qcom_host** %3, align 8
  %9 = getelementptr inbounds %struct.ufs_qcom_host, %struct.ufs_qcom_host* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @phy_power_off(i32 %10)
  %12 = load %struct.ufs_qcom_host*, %struct.ufs_qcom_host** %3, align 8
  %13 = getelementptr inbounds %struct.ufs_qcom_host, %struct.ufs_qcom_host* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @phy_exit(i32 %14)
  ret void
}

declare dso_local %struct.ufs_qcom_host* @ufshcd_get_variant(%struct.ufs_hba*) #1

declare dso_local i32 @ufs_qcom_disable_lane_clks(%struct.ufs_qcom_host*) #1

declare dso_local i32 @phy_power_off(i32) #1

declare dso_local i32 @phy_exit(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
